--- a/index.html
+++ b/index.html
@@ -43,16 +43,7 @@
         <div id="floor"></div>
       </div>
 
-      <div class="empty"></div>
-      <div class="empty"></div>
-
-      <div class="item" id="footer">
-        <div id="links">
-          <a href="https://shinyou.ng">shinyoung</a>
-          <a href="https://github.com/choshinyoung/watermelon">Github</a>
-        </div>
-
-        <p>Made with ❤️ by choshinyoung</p>
+        <p>Made with ❤️ by yangchi</p>
       </div>
     </div>
 
