--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 
-    <title>Watermelon</title>
+    <title>카푹많관부</title>
 
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="watermelon" />
